--- a/formulario.html
+++ b/formulario.html
@@ -27,7 +27,7 @@
         </div>
         <div>
             <label for="correo">ingrese su correo</label>
-            <input type="text" id="correo" name="coreo" required placeholder="ejemplo@gmail.com" pattern=[+@+]{5,50}>
+            <input type="text" id="correo" name="coreo" required placeholder="ejemplo@gmail.com" pattern=[@]{5,50} [.com, .co]>
         </div>
 
         <button type="submit">enviar</button>
