--- a/clase3/carta.html
+++ b/clase3/carta.html
@@ -40,7 +40,7 @@
                 <footer>
                     <p>Saludos cordiales,</p>
                     
-                    <img src="firma.jpg" / style="height: -2;">
+                    <img src="firma.jpg" / style="height:100px;">
                     <h3>Hernán Álavarez</h3>
                 </footer>
         </div>
